--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,8 +1,8 @@
 {
-    "githubUsername": "harochen",
-    "blogTitle": "harochen",
-    "blogDescribe": "欢迎来到haro的个人博客。",
-    "htmlTitle": "haro的博客",
+    "githubUsername": "Haro Chen",
+    "blogTitle": "Haro's Home",
+    "blogDescribe": "Welcom Haro's Home!",
+    "htmlTitle": "Haro's Vlog",
     "fontColor": "#ffffff",
     "useBackgroundImage": false,
     "backgroundColorLeft": "#2690F9",
